@@ -428,6 +428,8 @@ static void handle_topic(struct network_state *s, struct line *l)
 	struct channel_state *c = find_channel(s, l->args[1]);
 	if(c->topic)g_free(c->topic);
 	c->topic = g_strdup(l->args[2]);
+	c->topic_set_time = time(NULL);
+	c->topic_set_by = line_get_nick(l);
 }
 
 static void handle_332(struct network_state *s, struct line *l) 
@@ -441,6 +443,19 @@ static void handle_332(struct network_state *s, struct line *l)
 
 	if(c->topic)g_free(c->topic);
 	c->topic = g_strdup(l->args[3]);
+}
+
+static void handle_333(struct network_state *s, struct line *l) 
+{
+	struct channel_state *c = find_channel(s, l->args[1]);
+
+	if(!c) {
+		log_network_state(LOG_WARNING, s, "Can't set topic last set time for unknown channel '%s'!", l->args[1]);
+		return;
+	}
+
+	c->topic_set_time = atoi(l->args[3]);
+	c->topic_set_by = g_strdup(l->args[2]);
 }
 
 static void handle_no_topic(struct network_state *s, struct line *l) 
@@ -832,6 +847,7 @@ static struct irc_command {
 	{ "324", 3, handle_324 },
 	{ "329", 3, handle_329 },
 	{ "332", 3, handle_332 },
+	{ "333", 3, handle_333 },
 	{ "331", 1, handle_no_topic },
 	{ "353", 4, handle_namreply },
 	{ "366", 2, handle_end_names },
